# CompressingStringCollections

./: .gitignore  README.md
cli/: Cargo.toml
cli/src/: main.rs
data_normalizer/: Cargo.toml
data_normalizer/src/: main.rs
lempel_ziv77/: Cargo.toml
lempel_ziv77/src/: lz77.rs  main.rs  suffix_tree.rs
relative_lempel_ziv/: Cargo.toml
relative_lempel_ziv/src/: analysis.rs  lib.rs  memory.rs  memory_usage.rs
relative_lempel_ziv/tests/: integration_test.rs
suffix_tree/: Cargo.toml
suffix_tree/src/: lib.rs
suffix_tree/src/types/: label_data.rs  node.rs
test_data/: README.md
