[package]
name = "cli"
version = "0.1.0"
authors = ["Stefan Lemvig Frederiksen <stefanlemvigfrederiksen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4.11"
simplelog="0.8"
structopt = "0.3.20"
anyhow = "1.0.33"
indicatif = "0.15"
console = "0.12"

[dependencies.relative_lempel_ziv]
path = "../relative_lempel_ziv"

[dev-dependencies]