[package]
name = "data_normalizer"
version = "0.1.0"
authors = ["Stefan Frederiksen <stefanlemvigfrederiksen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
anyhow = "1.0.33"
indicatif = "0.15"
console = "0.12"