[package]
name = "relative_lempel_ziv"
version = "0.1.0"
authors = ["Stefan Frederiksen <stefanlemvigfrederiksen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.15"
console = "0.12"
rayon = "1.5.0"
rand = "0.7.3"

[dependencies.suffix_tree]
path = "../suffix_tree"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"